fixing the jump of the arrows when rotated

--- a/JavaScript-Clock/mainStyle.css
+++ b/JavaScript-Clock/mainStyle.css
@@ -31,3 +31,6 @@
     transition: .04s all;
     transition-timing-function: cubic-bezier(0.95, 2.7, 0.58, 1);
 }
+.notransition {
+    transition: none !important;
+}
